# ai-review-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
hooks/: main.py  pre-commit.py
src/: openai_consumer.py  utils.py
tests/: test_ai_consumer_feedback_response.py  test_main.py  test_open_ai_consumer.py  test_utils.py
utils/: ai_feedback_filter.py  openai_consumer.py  protocols.py
