[project]
name = "ai-review"
version = "0.0.1"
description = "This hook performs a review of your code using an AI model."
readme = "README.md"
keywords = [
    "pre-commit",
]
license = { file = "LICENSE" }
authors = [{ name = "Jose Ariza"}, { name = "Jose Ariza"}]
requires-python = ">=3.13"
dependencies = [
    "openai==1.71.0",
    "python-dotenv==1.1.0",
]

[project.scripts]
ai-review = "hooks.main:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.coverage.run]
branch = true
source = ["utils", "hooks"]

[tool.coverage.report]
show_missing = true
skip_covered = true
